# vscode-with-vcpkg-c-

./: README.md
vscode-vcpkg/: CMakeLists(wsl).txt  CMakeLists.txt  main.cpp
